--- a/Lab_2/index.html
+++ b/Lab_2/index.html
@@ -8,8 +8,8 @@
 	</head>
 	<body>
 		
-		<div class="sender-column">
-			<p>><strong>Dr. Terra Nova</strong><br>
+		<div class="sender-column"><address>
+			<p><strong>Dr. Terra Nova</strong><br>
 		Faculty of Information<br>
 		University of Maryland<br>
 		College Park, MD 20742<br>
