--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<title>Ted Trabucco's INST377 Spring Test Page</title>
 	</head>
 	<body>
-		<h1>Does Ted like BBQ?</h1>
+		<h1>How much does Ted like BBQ?</h1>
         <img src="./Smoking.jpg">
-		<p>You know it</p>
+		<p>A disproportionate amount.</p>
 	</body>
 </html>
