--- a/Lab_2/index.html
+++ b/Lab_2/index.html
@@ -42,7 +42,7 @@
     <h2>Starting dates</h2>
     <p>
       We are happy to accommodate you starting your study with us at
-      <b>any time</b>, however it would suit us better if you could start at the
+      <strong>any time</strong>, however it would suit us better if you could start at the
       beginning of a semester; the start dates for each one are as follows:
     </p>
 
@@ -72,7 +72,7 @@
 
     <ol>
       <li>
-        Turning H<sub>2</sub>O into <b>wine</b>, and the health benefits of
+        Turning H<sub>2</sub>O into <strong>wine</strong>, and the health benefits of
         Resveratrol (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>.)
       </li>
       <li>
