--- a/Lab_3/index.html
+++ b/Lab_3/index.html
@@ -29,7 +29,7 @@
       <h2>A New Threat Arises</h2>
 
       <p>Dogs pretending to be people has become an increasingly troubling problem in a world utilizing remote work. All four of the dogs on the right have been caught in various office jobs. This is a dangerous trend in the professional world, one we all must take steps to prevent.</p>
-      <p>If you believe your workplace has been infiltrated by such conniving canines, report it immediately. It is estimated that over 50 people in the IRS alone have had their jobs stolen by puppies in the last year. These dogs far outshone their human counterparts as auditors in every metric available, including "showing basic human empathy", which every human IRS employee failed. Suspicious activity should be reported immediately. This includes drinking water out of toilet bowls, asking if they are a "Good Boy", or pooping all willy nilly like with no regard nor remorse.</p>
+      <p>If you believe your workplace has been infiltrated by such conniving canines, report it immediately. It is estimated that over 50 people in the IRS alone have had their jobs stolen by puppies in the last year. These dogs far outshone their human counterparts as auditors in every metric available, including "showing basic human empathy", which every human IRS employee failed. Suspicious activity should be reported immediately. This includes drinking water out of toilet bowls, asking if they are a "Good Boy", or pooping all willy nilly like with no regard nor remorse for collateral damage.</p>
       </section>
   
 
