--- a/resume/index.html
+++ b/resume/index.html
@@ -19,7 +19,7 @@
     <div class = "wrapper">
 
       <div class = "container">  
-        <img src="it_poster.jpg" alt="IT"> 
+        <img src="itposter.jpg" alt="IT"> 
         <p>To create the greatest
         web resume ever, proving
         my IT skills and helping
