--- a/resume/index.html
+++ b/resume/index.html
@@ -16,10 +16,12 @@
       <img src="umd_seal.jpg" alt="UMD"> 
     </header>
     <main>
+      <div class = "bodycontent">
     <div class = "wrapper">
 
       <div class = "container">  
-        <img src="itposter.jpg" alt="IT"> 
+        
+        <img src="itposter.JPG" alt="IT"> 
         <p>To create the greatest
         web resume ever, proving
         my IT skills and helping
@@ -51,6 +53,7 @@
         </ol>
       </div>
     </div>
+  </div>
   </main>     
   </body>
 </html>
